ui: scrollbar fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@
 ::-webkit-scrollbar-thumb {
   background: #8e8f93;
   border-radius: 5px;
-  border: 3px solid #011019;
+  border: 1px solid #9e9e9e;
 }
 
 ::-webkit-scrollbar-thumb:hover {
